--- a/css/estilos.css
+++ b/css/estilos.css
@@ -35,15 +35,23 @@ img{
 
 /* Encabezado */
 header{
-    position: absolute;
-    margin: 40px 0 0 40px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 18px;
+    margin: 24px 0px 0px 140px;
+    
   
 }
 header .logo{   
 display: flex;
 align-items: flex-start;
-width: 120px;
+width: 40px;
 height: 40px;
+
+}
+h1{
+    color: #0A3871;
 }
 /*Principal*/
 main{
@@ -204,12 +212,12 @@ main{
     outline: none;
 }
 .btn-copiar{
-    width: 224px;
+    width: 70%;
     height:67px;
     margin:23px;
     position: absolute;
     bottom:0;
-    left: 0;
+   left: -10px;
     visibility: hidden;
     padding: 15px;
     font-size: 16px;
@@ -221,6 +229,21 @@ main{
     cursor: pointer;
 
 }
+.parlante{
+    width: 50px;
+    height:50px;
+    margin:23px;
+    position: absolute;
+    bottom:0;
+    right: -10px;
+    visibility: hidden;
+    padding: 15px;
+    font-size: 16px;  
+    border: 1px solid var(--Dark-Blue);
+    border-radius:20px;
+    cursor: pointer;
+}
+a
 .btn-encriptar:hover,
 .btn-desencriptar:hover,
 .btn-copiar:hover{
@@ -236,8 +259,8 @@ footer{
     color: var(--Dark-Blue);
     text-align: center;
     height: 5px;
-    font-size: 20px;
-    font-weight: 500;
+    font-size: 18px;
+    font-weight: 400;
    
 }
 
@@ -250,6 +273,18 @@ footer{
     color: var(--Font);
     opacity: 0.6;
 }
+.voz{
+    width: 30px;
+    height: 30px;
+    padding: 24px;
+    visibility: hidden;
+    color: var(--Dark-Blue);
+    background: var(--White-Blue);
+    border-radius: 100%;
+    border: 1px solid var(--Dark-Blue);
+    cursor: pointer;
+    box-shadow: 0px 10px 19px -5px var(--RGBA);
+}
 /**/
 @media(max-width: 1250px){
     main{
@@ -258,6 +293,14 @@ footer{
         align-items: center;
         width: 100%;
     }
+    header .logo{   
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 40px;
+        height: 40px;
+        
+        }
     .encriptador{
         margin: 168px 0px 0px 0px;
         display: flex;
@@ -313,6 +356,7 @@ header .logo{
     width: 100%;
     background: var(--White);
     padding: 2px;
+   
 }
 .encriptar{
     width: 90%;
